fix alignment necessary only for small screens

--- a/app/modules/shelves/scss/_shelf_box.scss
+++ b/app/modules/shelves/scss/_shelf_box.scss
@@ -1,5 +1,5 @@
 .shelfBox{
-  margin: 0.7em 0 0 0;
+  margin: 0.5em 0 0 0;
   @include display-flex(row);
   .picture{
     // Fake until picture for shelf is implemented
